# singularity-music

./: CONTRIBUTING.md  README.md  meson.build
data/: dev.sinty.music.desktop  dev.sinty.music.json
po/: POTFILES.in  meson.build
resources/: dev.sinty.music.gresource.xml
src/: gst_audio_player.vala  main.vala  mini_player.vala  mpris_exporter.vala  music_window.vala  now_playing_page.vala  playlist.vala  track_info.vala
ui/: meson.build  now_playing.vetro
widget/: dev.sinty.music.now-playing.widget  now_playing_widget.vala
